<resources>
    <string name="app_name">CarePets_Draft</string>
    // About us
    <string name="app_developer">Nguyen Thi Tieu Tien
 21GIT
 Vietnam - Korea University Of Information And Communication Technology
    </string>
    <string name="app_features">Care Pets is the mobile application that show you how to take care of your pets in the best way, and help help you manage routine job about Pets</string>
    <string name="sign_up_ask">Don\'t have an account? Register</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="log_in">Log in</string>
    <string name="switch_remember">Remember your account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="login_ask">Already Have An Account? Sign in.</string>
    // Home
    <string name="pet_name">Name: %n</string>
    <string name="pet_birth">Birth: %b</string>
    <string name="pet_specify">Specify: %s</string>
    <string name="pet_quantity">Quantity: %q</string>
    // Search
    <string name="search">Search...</string>
    // note
    <string name="plus">+</string>
    <string name="save">Save</string>
</resources>